// v2.0 - ??/01/2015 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - ILSpy support.
  
  upgrades:
    - plugin API cleanup.

  bugfixes:
    - properly remove assembly context when the host assembly is unloaded.
    - validate current handler before switching to keep all alterations.

////////////////////////////////////////////////////////////////////////////////
// v1.9 - 01/12/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - optimize and fix IL code after body alteration or code injection. You can
      control this behaviour from the settings window.
    - extended verbatim string operand type in the constant & argument
      editor so that you can use special chars like \n, \t...
    - type specification composition, so that you can define a String[][]* var
    - add compilation profiles to better support Unity/Silverlight assemblies
      with "Replace all with code".
  
  upgrades:
    - Mono.Cecil update.
    - Filter autogenerated members with "Replace all with code".

  bugfixes:
    - fixed ModuleAttributes value will never be saved in some case. (lonwern)
    - fixed related property when deleting a getter or setter method.
    - fixed member selector and properties without getter & setter.
    - fixed injection adding bad or duplicate corlib reference.

////////////////////////////////////////////////////////////////////////////////
// v1.8 - 14/07/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - added verbatim string operand type in the instruction
      editor so that you can use special chars like \n, \t...
  
  upgrades:
    - support for Microsoft SDK v7.1A, v8.0A, v8.1A.

  bugfixes: