@@ -11,6 +11,7 @@
   bugfixes:
     - properly remove assembly context when the host assembly is unloaded.
     - validate current handler before switching to keep all alterations.
+    - fixed injection adding bad or duplicate corlib reference (again).
 
 ////////////////////////////////////////////////////////////////////////////////
 // v1.9 - 01/12/2014 ///////////////////////////////////////////////////////////
